flex for the body, changed direction and layout

--- a/style.css
+++ b/style.css
@@ -2,4 +2,6 @@ body {
     display: flex;
     flex: 1;
     flex-direction: column; 
+    justify-content: space-evenly;
+    align-items: center;
 }
