--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 body {
     display: flex;
     flex: 1;
-    flex-direction: column; 
-    justify-content: space-evenly;
-    align-items: center;
+    flex-direction: column;
+}
+header {
+    display: flex;
+}
+.logo {
+    display: flex;
+    justify-content: flex-start;
 }
