--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@ body {
 }
 header {
     display: flex;
+    justify-content: space-around;
 }
 .logo {
     display: flex;
-    justify-content: flex-start;
+}
+a {
+    text-decoration: none;
 }
