--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex: 1;
     flex-direction: column;
+    margin: 0;
 }
 header {
     display: flex;
@@ -16,4 +17,12 @@ a {
     text-decoration: none;
     color: white;
     padding-left: 20px;
+
+}
+
+
+.container1 {
+    display: flex;
+    background-color: #1F2937;
+    color: white;
 }
