--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     flex-direction: column;
     margin: 0;
 }
+
+
 header {
     display: flex;
     justify-content: space-around;
@@ -29,15 +31,36 @@ a {
     background-color: #1F2937;
     color: white;
     justify-content: center;
-
 }
 img {
     max-width: 150px;
     max-height: 150px; /* research image boxing + border */
 }
+
+
 .container2 {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+.results-images {
+    display: flex;
+}
+.image-description {
+    display: flex;
+}
+
+
+.container3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.author{
+    display: flex;
+    align-self: flex-end;
+}
+
+
+
 /*Add all fonts and basic layout to see whats missing*/
