--- a/style.css
+++ b/style.css
@@ -4,8 +4,13 @@ body {
     flex-direction: column;
     margin: 0;
 }
-
-
+button {
+    background-color: #3882f6;
+    border-color: #3882f6;
+    border-radius: 15px;
+    color: white;
+    
+}
 header {
     display: flex;
     justify-content: space-around;
@@ -32,9 +37,11 @@ a {
     color: white;
     justify-content: center;
 }
-img {
+.image-group {
     max-width: 150px;
     max-height: 150px; /* research image boxing + border */
+    border: 5px;
+    border-color: #3882f6;
 }
 
 
@@ -55,11 +62,21 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #e5e7eb;
 }
 .author{
     display: flex;
     align-self: flex-end;
 }
+
+
+.container4 {
+    background-color: #3882f6;
+    display: flex;
+    justify-content: center;
+}
+
+
 
 
 
