--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ header {
     justify-content: space-around;
     background-color: #1F2937;
     color: #f9faf8;
+    padding: 10px;
 }
 .logo {
     display: flex;
@@ -34,16 +35,18 @@ a {
 .container1 {
     display: flex;
     background-color: #1F2937;
-    color: white;
+    color: #f9faf8;
     justify-content: center;
+    padding: 120px;
 }
-.image-group {
-    max-width: 200px;
-    max-height: 200px; /* research image boxing + border */
-    border: 10px;
-    border-color: #3882f6;
-    border-radius: 15px;
-    border: #3882f6;
+.title1 {
+    font-size: 48px;
+    font-weight: bolder;
+}
+.logo-image {
+    height: 400px;
+    width: 800px;
+
 }
 
 
@@ -51,6 +54,14 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.image-group {
+    max-width: 200px;
+    max-height: 200px; /* research image boxing + border */
+    border: 10px;
+    border-color: #3882f6;
+    border-radius: 5px;
+    border: #3882f6;
 }
 .results-images {
     display: flex;
@@ -86,7 +97,7 @@ footer {
     justify-content: center;
     background-color: #1F2937;
     color: white;
-    padding: 40px;
+    padding: 20px;
     pad
 }
 
