--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     flex-direction: column;
     margin: 0;
     padding: 0;
+    font-family: roboto;
 }
 button {
     background-color: #3882f6;
@@ -24,7 +25,6 @@ header {
 .logo {
     display: flex;
     font-size: 24px;
-    font-family: roboto; /* need to download font */
 
 }
 a {
@@ -66,23 +66,24 @@ a {
     flex-direction: column;
     align-items: center;
 }
+.multi-space, .descript {
+    width: 250px;
+    display: flex;
+}
 .multi-space {
     height: 250px;
-    width: 250px;
     border: 5px solid #3882f6;
-    border-radius: 5px;
-    display: flex;
+    border-radius: 15px;
     justify-content: center;
     align-items: center;
 }
+
 .image-group {
     width: auto;
     height: 95%;
     max-width: 190px;
     max-width: 190px;
     border-radius: 5px;
-
-
 }
 .results-images {
     display: flex;
