--- a/style.css
+++ b/style.css
@@ -67,11 +67,11 @@ a {
     align-items: center;
 }
 .multi-space, .descript {
-    width: 250px;
+    width: 200px;
     display: flex;
 }
 .multi-space {
-    height: 250px;
+    height: 200px;
     border: 5px solid #3882f6;
     border-radius: 15px;
     justify-content: center;
@@ -80,8 +80,8 @@ a {
 
 .image-group {
     width: auto;
-    height: 95%;
-    max-width: 190px;
+    height: auto;
+    max-height: 190px;
     max-width: 190px;
     border-radius: 5px;
 }
@@ -90,8 +90,12 @@ a {
     gap: 40px;
 
 }
+.descript {
+    border: 5px solid white
+}
 .image-description {
     display: flex;
+    gap: 40px;
 }
 
 /*3rd*/
